tried to fix responsive and type for the dogs vs cats
articles still not centered

--- a/07-css-robots/reset.css
+++ b/07-css-robots/reset.css
@@ -201,7 +201,7 @@ body {
 	position:relative;
 	width:100%
 	height:300px;
-	background-color:#ecf2d2;
+	background-color:#744918;
 }
 
 #footer-contact {
